# deus-vult-backend

./: .env.example  .gitignore  CHANGELOG.md  README.md  alembic.ini  app.py  app.yaml  dev.yaml  dispatch.yaml  notes.md  prod.yaml  pyproject.toml  requirements.txt  scripts.sh
alembic/: env.py
alembic/versions/: c8ba7c7e553e_initial_database_schema_setup.py
src/: __init__.py  containers.py
src/agents/: __init__.py  agents_exceptions.py  agents_interfaces.py
src/agents/combinations/: combination_service.py
src/agents/core/: system_prompts.py
src/agents/glif/: glif_schemas.py  glif_service.py
src/api/: __init__.py  api_router.py
src/api/core/: config.py  database.py  dependencies.py  exceptions.py  interfaces.py
src/api/craft/: README.md  craft_constants.py  craft_interfaces.py  craft_orchestration.py  craft_registry.py  craft_router.py
src/api/craft/elements/: elements_agent.py  elements_constants.py  elements_exceptions.py  elements_model.py  elements_prompts.py  elements_router.py  elements_schemas.py  elements_service.py
src/api/craft/mines/: __init__.py
src/api/craft/progress/: progress_model.py  progress_schemas.py  progress_service.py
src/api/craft/recipes/: recipes_model.py  recipes_router.py  recipes_schemas.py  recipes_schemas.py.py  recipes_service.py
src/api/inventory/: inventory_exceptions.py  inventory_schemas.py  inventory_service.py
src/api/users/: users_router.py  users_schemas.py  users_service.py
src/now_the_game/: README.md  __init__.py
src/now_the_game/agents/: agents_exceptions.py  agents_handlers.py  agents_interfaces.py  agents_model.py  agents_schema.py  agents_schemas.py  agents_service.py
src/now_the_game/agents/language_models/: gemini.py  language_model_service.py  vertex.py
src/now_the_game/agents/providers/: base.py  gemini.py  vertex.py
src/now_the_game/agents/tools/: glif.py
src/now_the_game/core/: __init__.py  base.py  cache.py  config.py  database.py  database_meta.py  event_bus.py  events.py  logging.py  storage_config.py
src/now_the_game/game/: game_interfaces.py  game_registry.py  game_schemas.py
src/now_the_game/game/characters/: characters_model.py  characters_schemas.py  characters_service.py
src/now_the_game/game/clans/: clans_model.py  clans_schemas.py
src/now_the_game/game/events/: events_agent.py  events_prompts.py  events_schemas.py
src/now_the_game/game/session/: session_model.py  session_schemas.py
src/now_the_game/game/sessions/: sessions_model.py  sessions_schemas.py  sessions_service.py
src/now_the_game/storage/: bot_session.session-journal  chroma.py  sqlite.py
src/now_the_game/storage/schemas/: chat_members.sql  chats.sql  messages.sql  users.sql
src/now_the_game/telegram/: __init__.py  telegram_client.py  telegram_exceptions.py  telegram_handlers.py  telegram_interfaces.py  telegram_model.py  telegram_orchestrator.py  telegram_registry.py  telegram_schemas.py  telegram_utils.py
src/now_the_game/telegram/callback/: callback_handlers.py  callback_schemas.py  callback_utils.py
src/now_the_game/telegram/chats/: __init__.py  chats_model.py  chats_schemas.py  chats_service.py
src/now_the_game/telegram/client/: __init__.py  client_config.py  client_model.py  client_object.py  telegram_client.py  telegram_config.py
src/now_the_game/telegram/content/: content_path.py
src/now_the_game/telegram/inline/: inline_handlers.py  inline_schemas.py
src/now_the_game/telegram/membership/: __init__.py  membership_model.py  membership_schemas.py
src/now_the_game/telegram/memberships/: __init__.py  memberships_handlers.py  memberships_model.py  memberships_schemas.py  memberships_service.py
src/now_the_game/telegram/messages/: __init__.py  messages_handlers.py  messages_model.py  messages_schemas.py  messages_service.py
src/now_the_game/telegram/polls/: __init__.py  polls_handlers.py  polls_model.py  polls_schemas.py  polls_service.py
src/now_the_game/telegram/reactions/: reactions_constants.py  reactions_handlers.py  reactions_model.py  reactions_service.py  reactions_utils.py
src/now_the_game/telegram/text/: art.py  buttons.py  keyboards.py  messages.py
src/now_the_game/telegram/users/: __init__.py  users_model.py  users_schemas.py  users_service.py
src/shared/: __init__.py  base.py  base_llm.py  cache.py  config.py  database.py  event_bus.py  event_registry.py  exceptions.py  llm.py  logging.py  singleton.py  time.py  uow.py  worker.py
src/shared/observability/: ch_utils.py  logging_utils.py  metrics.py  schemas.py  system_usage.py  traces.py  utils.py
src/shared/observability/sql/: logs.sql  metrics.sql  traces.sql  traces_mv.sql
tests/api/: test_craft.py
utils/: combo_data.json  combo_dspy.py
