[project]
name = "now-the-game"
version = "0.1.0"
description = "'Now the Game' MVP Telegram bot"
readme = "README.md"
authors = [
    { name = "Chris Cherniakov", email = "taequn@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "chromadb>=0.6.3",
    "diskcache>=5.6.3",
    "dspy>=2.6.13",
    "google-cloud-aiplatform>=1.85.0",
    "google-generativeai>=0.8.4",
    "kurigram>=2.1.39",
    "pydantic>=2.10.6",
    "pydantic-ai>=0.0.42",
    "ruff>=0.11.0",
    "tgcrypto>=1.2.5",
    "uvloop>=0.21.0",
]

[project.scripts]
now-the-game = "now_the_game:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # mccabe
    "B",  # bugbear
    "UP", # pyupgrade
]
ignore = []  # Add any rules you want to ignore here

[tool.isort]
profile = "black"
