[project]
name = "deus-vult"
version = "0.2.0"
description = "'Deus Vult' Telegram bot"
readme = "README.md"
authors = [
    { name = "Chris Cherniakov", email = "haildeus@telemetree.io" }
]
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.15.1",
    "asyncpg>=0.30.0",
    "black>=25.1.0",
    "chromadb>=0.6.3",
    "clickhouse-connect>=0.8.17",
    "colorlog>=6.9.0",
    "commitizen>=4.5.0",
    "dependency-injector>=4.46.0",
    "diskcache>=5.6.3",
    "dspy>=2.6.13",
    "emoji>=2.14.1",
    "fastapi>=0.115.11",
    "google-auth>=2.38.0",
    "google-cloud-aiplatform>=1.85.0",
    "google-cloud-secret-manager>=2.23.2",
    "google-generativeai>=0.8.4",
    "greenlet>=3.1.1",
    "gunicorn>=23.0.0",
    "kurigram>=2.1.39",
    "mypy>=1.11",
    "numpy>=2.2.4",
    "psutil>=7.0.0",
    "pydantic>=2.10.6",
    "pydantic-ai>=0.0.42",
    "pydantic-settings>=2.8.1",
    "pynacl>=1.5.0",
    "ruff>=0.11.0",
    "sqlalchemy>=2.0.39",
    "sqlmodel>=0.0.24",
    "starlette>=0.46.1",
    "tgcrypto>=1.2.5",
    "uvicorn>=0.34.0",
    "uvloop>=0.21.0",
]

[project.scripts]
deus-vult = "app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# --- Commitizen Configuration ---
[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true

# --- Ruff Configuration ---
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # mccabe
    "B",  # bugbear
    "UP", # pyupgrade
]
ignore = []  # Add any rules you want to ignore here

[tool.isort]
profile = "black"

# --- MyPy Configuration ---
[tool.mypy]
python_version = "3.12"
files = ["src"]
strict = true

# Core Strictness
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = false
disallow_untyped_calls = true

# Warning Settings
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

# Import Handling
ignore_missing_imports = true

# Presentation
pretty = true
show_error_codes = true

# --- Pyright Configuration ---
[tool.pyright]
include = ["src"]
exclude = [
    "**/__pycache__",
    "**/.*",
    "**/.ipynb_checkpoints",
    "**/node_modules",
    "**/typestubs",
    ".venv",
    "build",
    "dist",
]

typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false